Translate internal links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
 <body>
   <main lang="en" hidden>
-    <section id="intro">
+    <section id="introduction" class="intro">
       <a href="?lang=es" hreflang="es" title="Ver página en español">
         <span>🇪🇸</span>&nbsp;ES<span>❯</span>
       </a>
@@ -33,7 +33,7 @@
       </svg>
     </section>
 
-    <section id="services">
+    <section id="services" class="services">
       <h2>
         <a href="#services">
           Here are the main <strong>services</strong> I provide <i>🙇</i>
@@ -41,21 +41,21 @@
       </h2>
       <article>
         <ul>
-          <li tabindex="0" aria-describedby="service-translation-en">Translation</li>
-          <li tabindex="0" aria-describedby="service-proofreading-en">Proofreading</li>
-          <li tabindex="0" aria-describedby="service-transcreation-en">Transcreation</li>
-          <li tabindex="0" aria-describedby="service-copywriting-en">Copywriting</li>
+          <li tabindex="0" aria-describedby="service-translation">Translation</li>
+          <li tabindex="0" aria-describedby="service-proofreading">Proofreading</li>
+          <li tabindex="0" aria-describedby="service-transcreation">Transcreation</li>
+          <li tabindex="0" aria-describedby="service-copywriting">Copywriting</li>
         </ul>
         <ul>
-          <li id="service-translation-en">I provide high-quality translations from English, French and Galician into Spanish, with a strong commitment to accuracy and cultural nuance. While I am capable of handling a broad range of topics and love exploring new worlds, I have ample experience in nutrition, lifestyle medicine and plant-based diets. I hold myself to the highest standards and strive to deliver great work with a high attention to detail.</li>
-          <li id="service-proofreading-en">With extensive experience editing, reviewing and proofreading both translated and original texts, I make sure that every piece of writing is error-free. I carefully check for orthographic, grammatical and stylistic issues, and offer valuable improvements that enhance the overall quality and flow of the text. Even the most meticulous translators and writers can overlook details, which is why a second pair of eyes is an essential step in quality assurance.</li>
-          <li id="service-transcreation-en">If you’re launching a campaign in a foreign language, you need something more than translation: you need a transcreator. As one, my role is to maintain the essence of the original material while adapting the message for the new target audience, through a creative process that calls for freedom to draw outside the lines. It’s all about making sure your campaign connects, inspires and never gets lost in translation (pun intended).</li>
-          <li id="service-copywriting-en">Do you find yourself in need of fresh and original content for your business? Time for a copywriter! Good campaign copy helps you increase brand awareness and improve brand image, and is the key to an engaged audience. I write compelling text for websites, social media and any number of marketing resources, making sure your brand has personality and a clear, recognizable voice.</li>
+          <li id="service-translation">I provide high-quality translations from English, French and Galician into Spanish, with a strong commitment to accuracy and cultural nuance. While I am capable of handling a broad range of topics and love exploring new worlds, I have ample experience in nutrition, lifestyle medicine and plant-based diets. I hold myself to the highest standards and strive to deliver great work with a high attention to detail.</li>
+          <li id="service-proofreading">With extensive experience editing, reviewing and proofreading both translated and original texts, I make sure that every piece of writing is error-free. I carefully check for orthographic, grammatical and stylistic issues, and offer valuable improvements that enhance the overall quality and flow of the text. Even the most meticulous translators and writers can overlook details, which is why a second pair of eyes is an essential step in quality assurance.</li>
+          <li id="service-transcreation">If you’re launching a campaign in a foreign language, you need something more than translation: you need a transcreator. As one, my role is to maintain the essence of the original material while adapting the message for the new target audience, through a creative process that calls for freedom to draw outside the lines. It’s all about making sure your campaign connects, inspires and never gets lost in translation (pun intended).</li>
+          <li id="service-copywriting">Do you find yourself in need of fresh and original content for your business? Time for a copywriter! Good campaign copy helps you increase brand awareness and improve brand image, and is the key to an engaged audience. I write compelling text for websites, social media and any number of marketing resources, making sure your brand has personality and a clear, recognizable voice.</li>
         </ul>
       </article>
     </section>
 
-    <section id="tools">
+    <section id="tools" class="tools">
       <h2>
         <a href="#tools">
           These are some of the <strong>tools</strong> I’ve used <i>🛠</i>
@@ -228,7 +228,7 @@
       </ol>
     </section>
 
-    <section id="outro">
+    <section class="outro">
       <svg viewBox="0 0 1000 100" xmlns="http://www.w3.org/2000/svg">
         <path d="M0,50 C500,0 500,100 1000,50 V0 H0 Z" />
       </svg>
@@ -243,7 +243,7 @@
         <iframe data-tally-src="https://tally.so/embed/5BKdrb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="248"></iframe>
       </article>
 
-      <a class="back-to-top" href="#intro">Back to top ↑</a>
+      <a class="back-to-top" href="#introduction">Back to top ↑</a>
 
       <small>
         Website made with love ♥️ by yours truly and me husband
@@ -252,9 +252,9 @@
   </main>
 
   <main lang="es" hidden>
-    <section id="intro">
+    <section id="introduccion" class="intro">
       <a href="?lang=en" hreflang="en" title="Go to English version">
-        <span>❮</span>EN&nbsp;<span>🇬🇧</span>
+        <span>🇬🇧</span>&nbsp;EN<span>❯</span>
       </a>
 
       <article>
@@ -267,7 +267,7 @@
           Trabajo como traductora profesional del inglés, francés y gallego al español. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <em>marketing</em> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio. Los proyectos creativos son música para mis oídos, por eso me encantan la transcreación y la traducción literaria. También soy cantante y música, y me encanta aprender cosas nuevas de forma constante, así que tengo una lista de <em>hobbies</em> generosa, como la lectura, la repostería con masa madre, el punto o la jardinería.
         </p>
         <ul>
-          <li><a href="#contact" title="Ir al formulario de contacto">Contacto</a>
+          <li><a href="#contacto" title="Ir al formulario de contacto">Contacto</a>
           <li><a href="CV_AngelaGV_Traductora_EN-ES.pdf" target="_blank">CV</a>
           <li><a target="_blank" href="https://linkedin.com/in/angelagv">LinkedIn</a>
         </ul>
@@ -278,31 +278,31 @@
       </svg>
     </section>
 
-    <section id="services">
+    <section id="servicios" class="services">
       <h2>
-        <a href="#services">
+        <a href="#servicios">
           No soy <em>superwoman</em>, pero sí ofrezco varios <strong>servicios</strong> <i>🙇</i>
         </a>
       </h2>
       <article>
         <ul>
-          <li tabindex="0" aria-describedby="service-translation-es">Traducción</li>
-          <li tabindex="0" aria-describedby="service-proofreading-es">Revisión</li>
-          <li tabindex="0" aria-describedby="service-transcreation-es">Transcreación</li>
-          <li tabindex="0" aria-describedby="service-copywriting-es">Copywriting</li>
+          <li tabindex="0" aria-describedby="servicio-traduccion">Traducción</li>
+          <li tabindex="0" aria-describedby="servicio-revision">Revisión</li>
+          <li tabindex="0" aria-describedby="servicio-transcreacion">Transcreación</li>
+          <li tabindex="0" aria-describedby="servicio-copywriting">Copywriting</li>
         </ul>
         <ul>
-          <li id="service-translation-es">Traduzco textos del inglés, del francés y del gallego al español. Gracias a mi experiencia internacional, puedo traducir hacia el español de España o a un español más "panhispánico" (¡no olvidemos que el español neutro no existe!), y me comprometo a producir textos fiables y con sensibilidad a las diferencias culturales. Aunque puedo abarcar una gran variedad de temáticas, y me encanta trabajar en cosas nuevas, tengo amplia experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales. Mis estándares de calidad son exigentes y me esfuerzo para entregar textos pulidos con gran atención al detalle.</li>
-          <li id="service-proofreading-es">Cuento con amplia experiencia en revisión y edición de textos, tanto traducidos como originales; una tarea fundamental para conseguir resultados sin errores. Me encargo de buscar posibles fallos de traducción, calcos del idioma de origen, faltas de ortotipografía y problemas de estilo, entre otros, para mejorar la adecuación y la fluidez del contenido. Hasta el traductor o escritor más meticuloso puede cometer errores, por lo que un segundo par de ojos es esencial para obtener un texto de la mejor calidad posible.</li>
-          <li id="service-transcreation-es">Las campañas de publicidad necesitan algo más que una simple traducción: necesitan a un transcreador. Como tal, mi trabajo es mantener la esencia del material original y adaptar el mensaje para su nuevo público meta, mediante un proceso creativo que requiere de la libertad necesaria para salirte de lo establecido. Se trata de hacer que tu campaña tenga alcance y repercusión.</li>
-          <li id="service-copywriting-es">¿Necesitas a alguien que escriba contenido para tu empresa o campaña? ¡Estás buscando la labor de un <em>copywriter</em>! El contenido de calidad te ayuda a definir y mejorar la imagen de marca y a dar a conocer tu empresa, y es la clave para cautivar a tu audiencia. Puedo crear contenido atractivo para páginas web, redes sociales u otros materiales promocionales, asegurándome de que tu marca tenga una personalidad clara y reconocible.</li>
+          <li id="servicio-traduccion">Traduzco textos del inglés, del francés y del gallego al español. Gracias a mi experiencia internacional, puedo traducir hacia el español de España o a un español más "panhispánico" (¡no olvidemos que el español neutro no existe!), y me comprometo a producir textos fiables y con sensibilidad a las diferencias culturales. Aunque puedo abarcar una gran variedad de temáticas, y me encanta trabajar en cosas nuevas, tengo amplia experiencia en áreas como la nutrición, la medicina del estilo de vida y las dietas vegetales. Mis estándares de calidad son exigentes y me esfuerzo para entregar textos pulidos con gran atención al detalle.</li>
+          <li id="servicio-revision">Cuento con amplia experiencia en revisión y edición de textos, tanto traducidos como originales; una tarea fundamental para conseguir resultados sin errores. Me encargo de buscar posibles fallos de traducción, calcos del idioma de origen, faltas de ortotipografía y problemas de estilo, entre otros, para mejorar la adecuación y la fluidez del contenido. Hasta el traductor o escritor más meticuloso puede cometer errores, por lo que un segundo par de ojos es esencial para obtener un texto de la mejor calidad posible.</li>
+          <li id="servicio-transcreacion">Las campañas de publicidad necesitan algo más que una simple traducción: necesitan a un transcreador. Como tal, mi trabajo es mantener la esencia del material original y adaptar el mensaje para su nuevo público meta, mediante un proceso creativo que requiere de la libertad necesaria para salirte de lo establecido. Se trata de hacer que tu campaña tenga alcance y repercusión.</li>
+          <li id="servicio-copywriting">¿Necesitas a alguien que escriba contenido para tu empresa o campaña? ¡Estás buscando la labor de un <em>copywriter</em>! El contenido de calidad te ayuda a definir y mejorar la imagen de marca y a dar a conocer tu empresa, y es la clave para cautivar a tu audiencia. Puedo crear contenido atractivo para páginas web, redes sociales u otros materiales promocionales, asegurándome de que tu marca tenga una personalidad clara y reconocible.</li>
         </ul>
       </article>
     </section>
 
-    <section id="tools">
+    <section id="herramientas" class="tools">
       <h2>
-        <a href="#tools">
+        <a href="#herramientas">
           Estas son algunas de las <strong>herramientas</strong> que he usado para mi trabajo <i>🛠</i>
         </a>
       </h2>
@@ -375,9 +375,9 @@
       </ul>
     </section>
 
-    <section id="education">
+    <section id="educacion">
       <h2>
-        <a href="#education">
+        <a href="#educacion">
           Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong> <i>🎓</i>
         </a>
       </h2>
@@ -400,9 +400,9 @@
       </ol>
     </section>
 
-    <section id="courses">
+    <section id="cursos">
       <h2>
-        <a href="#courses">
+        <a href="#cursos">
           No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong> <i>📚</i>
         </a>
       </h2>
@@ -430,9 +430,9 @@
       </ol>
     </section>
 
-    <section id="experience">
+    <section id="experiencia">
       <h2>
-        <a href="#experience">
+        <a href="#experiencia">
           Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <i>👵</i>
         </a>
       </h2>
@@ -473,14 +473,14 @@
       </ol>
     </section>
 
-    <section id="outro">
+    <section class="outro">
       <svg viewBox="0 0 1000 100" xmlns="http://www.w3.org/2000/svg">
         <path d="M0,50 C500,0 500,100 1000,50 V0 H0 Z" />
       </svg>
 
       <article>
-        <h2 id="contact">
-          <a href="#contact">
+        <h2 id="contacto">
+          <a href="#contacto">
             Contáctame <i>📝</i>
           </a>
         </h2>
@@ -488,7 +488,7 @@
         <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="248"></iframe>
       </article>
 
-      <a class="back-to-top" href="#intro">Volver arriba ↑</a>
+      <a class="back-to-top" href="#introduccion">Volver arriba ↑</a>
 
       <small>
         Esta página web ha sido hecha con todo el cariño del mundo ♥️ gracias a la ayuda de mi marido
@@ -515,11 +515,14 @@
 
     ::selection { background-color: #ab6bb044 }
 
-    html { font-size: 18px }
+    html {
+      font-size: 18px;
+      scroll-behavior: smooth;
+    }
 
     body {
-      margin: 0;
       min-width: 400px;
+      margin: 0;
       background-color: #f4f2f3;
     }
 
@@ -528,7 +531,7 @@
     textarea { font-family: system-ui, sans-serif }
 
     main > section {
-      &:not(#intro, #outro) {
+      &:not(.intro, .outro) {
         max-width: 750px;
         margin: 0 auto;
         padding: 20px 5vw;
@@ -562,14 +565,14 @@
       }
     }
 
-    #intro > article,
-    #outro > article {
+    .intro > article,
+    .outro > article {
       max-width: 750px;
       padding: 0 5vw;
     }
 
-    #intro,
-    #outro {
+    .intro,
+    .outro {
       display: flex;
       flex-direction: column;
       gap: 75px;
@@ -586,16 +589,16 @@
       }
     }
 
-    #intro { background-image: linear-gradient(#412565, #ab6bb0) }
-    #outro { background-image: linear-gradient(#ab6bb0, #412565) }
+    .intro { background-image: linear-gradient(#412565, #ab6bb0) }
+    .outro { background-image: linear-gradient(#ab6bb0, #412565) }
 
-    #intro > svg { bottom: -1px }
-    #outro > svg { top: -1px }
+    .intro > svg { bottom: -1px }
+    .outro > svg { top: -1px }
 
-    main[lang=es] > #intro > svg,
-    main[lang=es] > #outro > svg { transform: scaleX(-1) }
+    main[lang=es] > .intro > svg,
+    main[lang=es] > .outro > svg { transform: scaleX(-1) }
 
-    #intro > a[hreflang] {
+    .intro > a[hreflang] {
       align-self: end;
       display: flex;
       gap: 2px;
@@ -609,7 +612,7 @@
       &:hover { opacity: 1 }
     }
 
-    #intro > article {
+    .intro > article {
       > img {
         margin-bottom: 25px;
         border-radius: 50%;
@@ -651,12 +654,12 @@
       }
     }
 
-    #outro {
+    .outro {
       gap: 50px;
       padding: 0 0 50px 0;
     }
 
-    #outro > article {
+    .outro > article {
       z-index: 0;
 
       > h2 {
@@ -684,7 +687,7 @@
       }
     }
 
-    #outro > a.back-to-top {
+    .outro > a.back-to-top {
       display: block;
       text-align: center;
       font-size: 0.85rem;
@@ -694,9 +697,9 @@
       &:hover { opacity: 1 }
     }
 
-    #outro > small { opacity: 0.75 }
+    .outro > small { opacity: 0.75 }
 
-    #services > article {
+    .services > article {
       display: flex;
 
       > ul:first-child {
@@ -730,7 +733,7 @@
       }
     }
 
-    #tools > ul {
+    .tools > ul {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 10px;
@@ -843,7 +846,7 @@
     const spanishPage = body.querySelector('main[lang=es]')
 
     for (const page of [englishPage, spanishPage]) {
-      const servicesContent = page.querySelector('#services > article')
+      const servicesContent = page.querySelector('.services > article')
       const servicesTitles = Array.from(servicesContent.querySelectorAll('& > ul:first-child li'))
       const servicesDescriptions = Array.from(servicesContent.querySelectorAll('& > ul:last-child li'))
 
@@ -866,17 +869,6 @@
             onServiceTitleSelected()
         }
       })
-    }
-
-    for (const anchor of body.querySelectorAll(`a[href^='#']`)) {
-      anchor.onclick = ev => {
-        ev.preventDefault()
-        const href = anchor.getAttribute('href')
-        location.hash = href
-        body
-          .querySelector('main:not([hidden]) ' + href)
-          .scrollIntoView({ behavior: 'smooth' })
-      }
     }
 
     renderPageBasedOnUrl()
