Adjust note text

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <li>Participación en iniciativas internas para promover contenido con sensibilidad hacia los problemas de acceso a comida, situación econónima y barreras culturales
             <li>Creación y tutela de un club de lectura enfocado en sensibilización multicultural
           </ul>
-          <p class="secondary-text">Advertencia: No he traducido ni revisado todo el contenido que aparece en las numerosas plataformas de NutritionFacts.org, y esto incluye las redes sociales. Una gran cantidad de las traducciones son de voluntarios que no estaban a mi cargo, y se sigue produciendo y editando contenido tras mi partida.</p>
+          <p class="secondary-text">Nota: No todo el contenido que aparece en las numerosas plataformas de NutritionFacts.org ha sido traducido o revisado por mí; esto incluye las redes sociales. Una gran cantidad de las traducciones son de voluntarios que no estaban a mi cargo, y se sigue produciendo y editando contenido tras mi partida.</p>
         </li>
       </ol>
     </section>
