Fix horizontal scrollbar on Firefox

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     ::selection { background-color: #ab6bb044 }
 
     html {
+      overflow-x: hidden;
       font-size: 18px;
       scroll-behavior: smooth;
     }
