--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
     ::selection { background-color: #ab6bb044 }
 
     html {
-      overflow-x: hidden;
+      min-width: 400px;
       font-size: 18px;
       scroll-behavior: smooth;
     }
 
     body {
-      min-width: 400px;
       margin: 0;
       background-color: #f4f2f3;
     }
@@ -92,6 +91,7 @@
       flex-direction: column;
       gap: 75px;
       align-items: center;
+      overflow: hidden;
       color: #eee;
       text-shadow: 0 1px 5px rgb(0 0 0 / 40%);
 
@@ -211,7 +211,12 @@
       &:hover { opacity: 1 }
     }
 
-    .outro > small { opacity: 0.75 }
+    .outro > small {
+      padding: 0 5vw;
+      text-align: center;
+      text-wrap: balance;
+      opacity: 0.75;
+    }
 
     .services > article {
       display: flex;
