Fix spacing around digits

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
             <li>Traducción y edición de contenido para redes sociales
             <li>Transcreación y <em>copywriting</em> para campañas promocionales y recaudaciones de fondos
             <li>Localización de recursos divulgativos, como guías de nutrición saludable, infografías y cursos por correo electrónico.
-            <li>Análisis de métricas para medir el alcance y la participación del público, y conseguir así establecer una presencia en redes de más de 225&nnbsp;000 seguidores desde cero
+            <li>Análisis de métricas para medir el alcance y la participación del público, y conseguir así establecer una presencia en redes de más de&nbsp;225&#x202F;000 seguidores desde cero
             <li>Programación del calendario de redes con plataformas como Buffer, TikTok Studio y Later
             <li>Localización de la página web y gestión de contenidos en WordPress
             <li>Localización de la aplicación móvil "La Docena Diaria del Dr. Greger" para Android y iOS
